--- a/contact.html
+++ b/contact.html
@@ -20,25 +20,28 @@
       <a class="nav_links" href="contact.html">CONTACT</a>
     </nav>
     <div class="search-container">
-      <input type="text" placeholder="Search.." name="search">
+      <input class="search" type="text" placeholder="Search.." name="search">
       <button type="submit" ><i class="fa fa-search"></i></button>
     </div>
     </div>
 		<div class="content">
       <form>
 			  <table>
-        <h1 style="margin-left: 2em">Contact Us</h1>
-				<tr><td><input class="input" type="text" placeholder="First Name" name="First Name" required></td>
-				<td><input class="input" type="text" placeholder="Email" name="Email" required></td>
-        <td><td><input class="input"  type="text" placeholder="Number" name="Number" required></td></tr>
+        <h2 style="margin-left: 3.5em">Contact Us</h2>
+				<tr><td><input class="input" type="text" placeholder="Your Name" name="First Name" required></td>
+				<td><input class="input" type="text" placeholder="Your Email" name="Email" required></td>
+        <td><td><input class="input"  type="text" placeholder="Phone Number" name="Number" required></td></tr>
         </table>
          </form>
          <table>
-          <tr><td><textarea  name=""  cols="100" rows="10"placeholder="Add Comment.." ></textarea></td></tr>
+          <tr><td><textarea  name=""  cols="105" rows="10"placeholder="Your Message" ></textarea></td></tr>
          </table>
-         
-      <button class="expand">Submit</button>
-   
+      <button class="expand">Send Email</button>
+    </div>
+    
+    <div class="cantact_info">
+     <h3>Contact Us</h3>
+     <p><img style="height: 30px;width: 30px;" src="images/email.png" alt=""> info@code4ct.com</p>
     </div>
  
    <!-- <div class="info-page"><img src="images/info.PNG" alt="Contact info"></div> -->
