--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a class="nav_links" href="contact.html">CONTACT</a>
     </nav>
     <div class="search-container">
-      <input type="text" placeholder="Search.." name="search">
+      <input  class="search" type="text" placeholder="Search.." name="search">
       <button type="submit" ><i class="fa fa-search"></i></button>
     </div>
   </div>
@@ -46,7 +46,7 @@
           We want to see young women empowered to leverage technology for social innovation, <br>
           so that there is greater diversity in the African tech industry. We want high school <br>
           girls to have an enabling environment to imagine and create new technology that is <br>
-          relevant to a South African context.</p><a href="contact.html"><button class="infoButtom">More info</button></a> </div>
+          relevant to a South African context.</p><a href="about.html"><button class="infoButtom">More info</button></a> </div>
 
           <div class="item">
             <img class="image2" src="images/Image.jpg" alt="Coding students" >
@@ -128,51 +128,7 @@
       </div>
     </div>
       
-    <section id="container2">
-        <h2 style="border-bottom:1px solid gray;"><span style="border-bottom:2px solid #e38f84;">Meet</span> our team:</h2>
-  
-        <div id="meet_team">
-          <div class="Emma_Andrea">
-            <table>
-              <tr>
-                <td><span><img src="images/Emma.jpg" alt="" width="250px" height="300px"></span></td>
-                <td>
-                  <h3>Emma Dicks</h3>
-                  <span style="color:gray;">Founder and Director</span>
-                  <p>Emma is passionate about providing high quality education that enables young people to bring innovative ideas to life and play an active role in South Africa’s economy.</p>
-                </td>
-              </tr>
-              <tr>
-                <td><span><img src="images/Andrea.jpg" alt="" width="250px" height="300px"></span></td>
-                <td>
-                  <h3>Andrea Petersen</h3>
-                  <span style="color:gray;">Operations Lead</span>
-                  <p>Andrea thrives on seeing key players in the Code4CT ecosystem discover how they can make the greatest impact.</p>
-                </td>
-              </tr>
-            </table>
-          </div>
-          <div class="Tegan_Tracy">
-            <table>
-              <tr>
-                <td><span><img src="images/Tegan.jpg" alt="tegan" width="250px" height="300px"></span></td>
-                <td>
-                  <h3>Tegan Crous</h3>
-                  <span style="color:gray;">Program Lead</span>
-                  <p>Tegan heads up the high school program.She is spurred on by a heart for people and seeing them pursue their potential in a safe, fun and nurturing environment.</p>
-                </td>
-              </tr>
-              <tr>
-                <td><span><img src="images/Tracy.jpg" alt="tracy" width="250px" height="300px"></span></td>
-                <td>
-                  <h3>Tracy-Anne Sikenjana</h3>
-                  <span style="color:gray;">Leadership Program Manager</span>
-                  <p>Tracy joined the Code4CT program in 2015 and then matriculated from Rustenburg Girls’ High in 2016. She decided to intern with Code4CT to give back to an organisation that had a large impact on her personal growth and development.</p>
-                </td>
-              </tr>
-            </table>
-          </div>
-        </div>
+    
 
 </body>
 </html>
