--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   </nav>
   <div class="search-container">
     <form action="/action_page.php">
-      <input type="text" placeholder="Search.." name="search">
+      <input class="search" type="text" placeholder="Search.." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
   </div>
