--- a/portfolio.html
+++ b/portfolio.html
@@ -26,12 +26,119 @@
       <input class="search" type="text" placeholder="Search.." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
+</div>
+
+<section id="container">
+  <div class="border">
+    <h1>OUR PORTFOLIO</h1>
+    <a href="homepage.html">HOMEPAGE</a>
+    <img src="images/rightArrow.png" alt="rightArrow" width="40px" height="15px">
+    <a href="portfolio.html">PORTFOLIO</a>
   </div>
-    <div class="Holder"><p class="text" >Portfolio</p></div>
-    <h1>Our Portfolio</h1>
-    <p class="text1">Code for Cape Town strives to see young women empowered to leverage technology for social innovation,
-       so that there is greater <br> diversity in the African tech industry. Code for Cape Town equips high potential 
-       female learners with the coding, <br> problem solving and life skills that will allow them to leverage technology
-        to contribute meaningfully to South Africa’s innovation system.</p>
-</div>
-</div>
+</section>
+
+<section id="container1">
+  <div class="portfolioInfo">
+    <h2 style="text-align:center;border-bottom:1px solid gray;">Our Awes<span style="border-bottom:2px solid #e38f84;">ome</span> Portfolio:</h2>
+    <p style="text-align:center;">Over the past 3 years, Code for Cape Town has reached over 600 young women with coding and social innovation. Not only have they been exposed to coding but they have also done careers and life skills courses, design thinking workshops and social innovation projects to address local challenges.</p>
+  </div>
+</section>
+
+<section id="container2">
+  <!-- <div class="rows"> -->
+    <div class="portfolioImages">
+      <img src="images/portfolioImage1.JPG" alt="" class="zoom" width="332px" height="222px">
+    </div>
+    <div class="portfolioImages">
+      <img src="images/portfolioImage2.JPG" alt="" class="zoom" width="334px" height="220px">
+    </div>
+    <div class="portfolioCollage">
+      <img src="images/portfolioImage3.JPG" alt="" class="zoom" width="333px" height="220px">
+    </div>
+    <div class="portfolioImages">
+      <img src="images/portfolio1.JPG" alt="" class="zoom"  width="334px" height="220px">
+    </div>
+  <!-- </div> -->
+    <div class="portfolioImages">
+      <img src="images/portfolio2.JPG" alt="" class="zoom" width="332px" height="220px">
+    </div>
+    <div class="portfolioCollage">
+      <img src="images/portfolio3.JPG" alt="" class="zoom" width="334px" height="220px">
+    </div>
+    <div class="portfolioImages">
+      <img src="images/portfolio4.JPG" alt="" class="zoom" width="333px" height="220px">
+    </div>
+    <div class="portfolioImages">
+      <img src="images/portfolio5.JPG" alt="" class="zoom" width="334px" height="220px">
+    </div>
+  </div>
+<!--
+  <div class="rows"> -->
+    <div class="portfolioImages">
+      <img src="images/portfolio6.JPG" alt="" class="zoom" width="332px" height="220px">
+    </div>
+    <div class="portfolioImages">
+      <img src="images/slide1.jpg" alt="" class="zoom" width="334px" height="220px">
+    </div>
+    <div class="portfolioCollage">
+      <img src="images/portfolioImage4.JPG" alt="" class="zoom" width="333px" height="220px">
+    </div>
+    <div class="portfolioImages">
+      <img src="images/portfolioImage5.jpg" alt="" class="zoom" width="334px" height="220px">
+    </div>
+  <!-- </div> -->
+</section>
+
+
+<div id="bars">
+    <div class="bar" data-percent="85">
+      <canvas class="bar-circle" width="70" height="70"></canvas>
+      <h3>Web design</h3>
+      <h5>Premium Web design & Web development in Cape Town.</h5>
+    </div>
+    <div class="bar" data-percent="90">
+      <canvas class="bar-circle" width="70" height="70"></canvas>
+      <h3>Branding</h3>
+      <h5>Branding is one of the most important aspects of any business</h5>
+    </div>
+    <div class="bar" data-percent="80">
+        <canvas class="bar-circle" width="70" height="70"></canvas>
+        <h3>Photography</h3>
+        <h5>Photography with a strong documentary approach.</h5>
+      </div>
+    <div class="bar" data-percent="78">
+      <canvas class="bar-circle" width="70" height="70"></canvas>
+      <h3>Print-Design</h3>
+      <h5>Print design, a subset of graphic design.</h5>
+    </div>
+ <style>
+   
+#bars {    
+    background-color: rgba(0, 0, 0, 0.527);
+	margin: 2em auto;
+    width: 100%;
+    height: 10%;
+	overflow: hidden;
+}
+
+.bar {
+	float: left;
+	width: 20%;
+    text-align: center;
+    margin-left: 50px;
+}
+
+.bar h3{
+	font-size: 1.4em;
+	font-weight: normal;
+    text-transform: uppercase;
+    
+}
+
+.bar-circle {
+	display: block;
+    margin: 0.7em auto; 
+}
+ </style>
+</body>
+</html>
