broken images fixed

--- a/index.html
+++ b/index.html
@@ -82,32 +82,32 @@
           <div style="float: right; width: 36%;margin-top: -370px;margin-right: 150px;">
             <img style="margin-left: 5px; margin-bottom: 5px" src="images/person1.JPG" alt="LAPTOP" width="250px" height="250px">
             <img style="margin-left: 5px; margin-bottom: 5px" src="Images/person2.JPG" alt="STUDENT" width="250px" height="250px">
-            <img style="margin-left: 5px"; src="Images/person3.JPG" alt="TUTOR" width="250px" height="250px">
-            <img style="margin-left: 5px;margin-bottom: 1px" src= "Images/person4.JPG" alt="WORKSTATION" width="250px" height="250px">
+            <img style="margin-left: 5px"; src="images/person3.JPG" alt="TUTOR" width="250px" height="250px">
+            <img style="margin-left: 5px;margin-bottom: 1px" src= "images/person4.JPG" alt="WORKSTATION" width="250px" height="250px">
           </div>
         </section>
         <section>
           <div  class="icon" </div>
             <div style="margin-right: 80px">
-              <img class="icons" src="Images/screen.png" style="margin-left: 40px" alt="pc">
+              <img class="icons" src="images/screen.png" style="margin-left: 40px" alt="pc">
               <h2 style="margin-left: 40px">Coding</h2>
               <p style="width: 60%; margin-left: 100px">Learn how to build your own websites using HTML, CSS, JavaScript & JQuery.
                 Go on to explore exciting modules from game development to user experience design.</p>
               </div>
               <div style="margin-right: 80px">
-                <img class="icons" src="Images/speaker.png" alt="multimedia">
+                <img class="icons" src="images/speaker.png" alt="multimedia">
                 <h2 style="margin-left: -30px">Communication</h2>
                 <p style="width: 80%; margin-left: 20px">Learn how to pitch ideas, represent yourself online, communicate professionally
                   and work with online collaboration tools.</p>
                 </div>
                 <div style="margin-right: 80px">
-                  <img class="icons" src="Images/wrench.png" style="" alt="wrench">
+                  <img class="icons" src="images/wrench.png" style="" alt="wrench">
                   <h2>Problem Solving</h2>
                   <p style="width: 80%; margin-left: 30px">Apply your coding skills to issues you are interested in. You will learn how to tackle
                     complex problems using the design thinking process.</p>
                   </div>
                   <div style="margin-right: 80px">
-                    <img class="icons" src="Images/documents.png" alt="documents">
+                    <img class="icons" src="images/documents.png" alt="documents">
                     <h2>Problem Solving</h2>
                     <p style="width: 80%; margin-left: 30px">Explore future options by meeting different companies doing exciting things with technology.
                       We offer career testing and connect you to our network of study institutions and bursary programs.</p>
@@ -129,17 +129,17 @@
 
                       <div id="awesome-images" style="float: left; width: 50%;">
 
-                        <img style ="margin: 2px 2px 2px -10px;" src="Images/container1.jpg" alt="Our Work" height= "205px" width= "240px">
+                        <img style ="margin: 2px 2px 2px -10px;" src="images/container1.jpg" alt="Our Work" height= "205px" width= "240px">
 
-                        <img style ="margin: 2px 2px 2px ;" src="Images/container2.jpg" alt="Our Work" height= "205px" width= "240px">
+                        <img style ="margin: 2px 2px 2px ;" src="images/container2.jpg" alt="Our Work" height= "205px" width= "240px">
 
-                        <img style ="margin: 2px 2px 2px -10px;" src="Images/container3.jpg" alt="Our Work" height= "205px" width= "240px">
+                        <img style ="margin: 2px 2px 2px -10px;" src="images/container3.jpg" alt="Our Work" height= "205px" width= "240px">
 
-                        <img style ="margin: 2px 2px 2px ;" src="Images/container4.jpg" alt="Our Work" height= "205px" width= "240px">
+                        <img style ="margin: 2px 2px 2px ;" src="images/container4.jpg" alt="Our Work" height= "205px" width= "240px">
                       </div>
 
                       <div id="aside" style="float:right; width: 50%; margin-top: 0px">
-                        <img src="Images/container5.jpg" height= "415px" width= "100%">
+                        <img src="images/container5.jpg" height= "415px" width= "100%">
                       </div>
                     </section>
                   </div>
@@ -152,7 +152,7 @@
 
                       <div class="teaminfo">
                         <div>
-                          <img src="Images/Andrea.jpg" alt="Andrea" height="250px" width="250px">
+                          <img src="images/Andrea.jpg" alt="Andrea" height="250px" width="250px">
                         </div>
                         <div style="padding-top: 5px;margin-left: 1em">
                           <p><b>Andrea Petersen</b></p>
@@ -162,7 +162,7 @@
 
 
                         <div>
-                          <img src="Images/Emma.jpg" alt="Emma" height="250px" width="250px">
+                          <img src="images/Emma.jpg" alt="Emma" height="250px" width="250px">
                         </div>
                         <div style="padding-top: 5px;margin-left: 1em">
                           <p><b> Emma Dicks </b></p>
@@ -174,7 +174,7 @@
                       <div class="teaminfo">
 
                         <div>
-                          <img src="Images/Tegan.jpg" alt="Tegan" height="250px" width="250px">
+                          <img src="images/Tegan.jpg" alt="Tegan" height="250px" width="250px">
                         </div>
                         <div style="padding-top: 5px;margin-left: 1em">
                           <p><b>Tegan Crous</b></p>
@@ -184,7 +184,7 @@
 
 
                         <div style="padding-left: 68px" >
-                          <img src="Images/Tracy.jpg" alt="tracy" height="250px" width="250px">
+                          <img src="images/Tracy.jpg" alt="tracy" height="250px" width="250px">
                         </div>
                         <div style="padding-top: 5px;margin-left: 1em">
                           <p><b> Tracy-Anne Sikenjana </b></p>
@@ -495,7 +495,7 @@
                       $('#partners').width($first.outerWidth(true));
                       $first.clone(true).appendTo('#partners');
                       $('#partners').addClass('ready');
-                    })
+                    }) 
                     </script>
 
 
