--- a/about.html
+++ b/about.html
@@ -178,49 +178,26 @@
   </section>
 
   <!-- section id for carousel,div id carousel-container,wuth div id carousel inner with unordered list with anchor tags consisting for partners logo   -->
-  <section id="carousel">
-    <div id='carousel_container'>
-      <div id='carousel_inner'>
-        <ul id='carousel_ul'>
-          <li>
-            <a href='#'>
-              <img src="images/deloitte-logo..jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href='#'>
-              <img src="images/lwandlelogo..jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href='#'>
-              <img src="images/mazars-logo..jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href='#'>
-              <img src="images/Mobenzi_Logo..jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href='#'>
-              <img src="images/openboxlogo..jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href='#'>
-              <img src="images/Takealot-logo..jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href='#'>
-              <img src="images/TNS-logo..jpg" alt="">
-            </a>
-          </li>
-        </ul>
-      </div>
+  <div class="carousel">
+    <div class="subCarousel">
+        <img src="images/partners1.png" width="180px" height="180px" alt="">
+        <img src="images/partners2.png" width="180px" height="180px" alt="">
+        <img src="images/partners3.png" width="180px" height="180px" alt="">
+        <img src="images/partners4.png" width="180px" height="180px" alt="">
+        <img src="images/partners5.png" width="180px" height="180px" alt="">
+        <img src="images/partners6.png" width="180px" height="180px" alt="">
+        <img src="images/partners.png" width="180px" height="180px" alt="">
+        <img src="images/partners.png" width="180px" height="180px" alt="">
+        <img src="images/partners9.png" width="180px" height="180px" alt="">
+        <img src="images/partners10.png" width="180px" height="180px" alt="">
+        <img src="images/partners11.png" width="180px" height="180px" alt="">
+        <img src="images/partners12.png" width="180px" height="180px" alt="">
+        <img src="images/partners13.png" width="180px" height="180px" alt="">
+        <img src="images/partners14.png" width="180px" height="180px" alt="">
+        <img src="images/partners15.png" width="180px" height="180px" alt="">
+        <img src="images/1partners6.png" width="180px" height="180px" alt="">
     </div>
-  </section>
+</div>
   <div class="footer">
     <footer>
       <div>
