--- a/portfolio.html
+++ b/portfolio.html
@@ -28,117 +28,286 @@
     </form>
 </div>
 
-<section id="container">
-  <div class="border">
-    <h1>OUR PORTFOLIO</h1>
-    <a href="homepage.html">HOMEPAGE</a>
-    <img src="images/rightArrow.png" alt="rightArrow" width="40px" height="15px">
-    <a href="portfolio.html">PORTFOLIO</a>
-  </div>
-</section>
+   <!-- This is the section 1 on top of the page -->
+   <div id="the_section1">
+    <h2>OUR PORTFOLIO</h2>
+    <h4><a href="index.html">HOME</a> <span>&rarr;</span> PORTFOLIO</h4>
+</div>
 
-<section id="container1">
-  <div class="portfolioInfo">
-    <h2 style="text-align:center;border-bottom:1px solid gray;">Our Awes<span style="border-bottom:2px solid #e38f84;">ome</span> Portfolio:</h2>
-    <p style="text-align:center;">Over the past 3 years, Code for Cape Town has reached over 600 young women with coding and social innovation. Not only have they been exposed to coding but they have also done careers and life skills courses, design thinking workshops and social innovation projects to address local challenges.</p>
-  </div>
-</section>
+<!-- This is the back to top button -->
+<div id="back_to_top">
+    <p>Λ</p>
+</div>
 
-<section id="container2">
-  <!-- <div class="rows"> -->
-    <div class="portfolioImages">
-      <img src="images/portfolioImage1.JPG" alt="" class="zoom" width="332px" height="222px">
-    </div>
-    <div class="portfolioImages">
-      <img src="images/portfolioImage2.JPG" alt="" class="zoom" width="334px" height="220px">
-    </div>
-    <div class="portfolioCollage">
-      <img src="images/portfolioImage3.JPG" alt="" class="zoom" width="333px" height="220px">
-    </div>
-    <div class="portfolioImages">
-      <img src="images/portfolio1.JPG" alt="" class="zoom"  width="334px" height="220px">
-    </div>
-  <!-- </div> -->
-    <div class="portfolioImages">
-      <img src="images/portfolio2.JPG" alt="" class="zoom" width="332px" height="220px">
-    </div>
-    <div class="portfolioCollage">
-      <img src="images/portfolio3.JPG" alt="" class="zoom" width="334px" height="220px">
-    </div>
-    <div class="portfolioImages">
-      <img src="images/portfolio4.JPG" alt="" class="zoom" width="333px" height="220px">
-    </div>
-    <div class="portfolioImages">
-      <img src="images/portfolio5.JPG" alt="" class="zoom" width="334px" height="220px">
-    </div>
-  </div>
-<!--
-  <div class="rows"> -->
-    <div class="portfolioImages">
-      <img src="images/portfolio6.JPG" alt="" class="zoom" width="332px" height="220px">
-    </div>
-    <div class="portfolioImages">
-      <img src="images/slide1.jpg" alt="" class="zoom" width="334px" height="220px">
-    </div>
-    <div class="portfolioCollage">
-      <img src="images/portfolioImage4.JPG" alt="" class="zoom" width="333px" height="220px">
-    </div>
-    <div class="portfolioImages">
-      <img src="images/portfolioImage5.jpg" alt="" class="zoom" width="334px" height="220px">
-    </div>
-  <!-- </div> -->
-</section>
+<!-- This is the portfolio main section -->
+<div id="the_portfolio_main">
 
-
-<div id="bars">
-    <div class="bar" data-percent="85">
-      <canvas class="bar-circle" width="70" height="70"></canvas>
-      <h3>Web design</h3>
-      <h5>Premium Web design & Web development in Cape Town.</h5>
+    <!-- This is the portfolio main header -->
+    <div id="portfolio_header">
+        <h2>Our Awe<span id="solid_border">some</span> Portfolio</h2>
+        <h4>Code for Cape Town strives to see young women empowered to leverage technology for social innovation, so that there is greater diversity in the African tech industry.  Code for Cape Town equips high potential female learners with the coding, problem solving and life skills that will allow them to leverage technology to contribute meaningfully to South Africa’s innovation system.</h4>
     </div>
-    <div class="bar" data-percent="90">
-      <canvas class="bar-circle" width="70" height="70"></canvas>
-      <h3>Branding</h3>
-      <h5>Branding is one of the most important aspects of any business</h5>
+
+    <!-- This is the main portfolio images section -->
+    <div id="portfolio_img_section">
+        <!-- This is the first row of images -->
+        <div id="portfolio_img_row1">
+            <!-- Images 1 -->
+            <div id="row1_img1">
+                <a href="./images/portfolio-page_img5.JPG" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio-page_img5.JPG"></a>
+                <a href="./images/image1.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/image1.jpg"></a>
+                <a href="./images/portfolio_img14.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img14.jpg"></a>
+            </div>
+            <!-- Images 2 -->
+            <div id="row1_img2">
+                <a href="./images/portfolio-page_img2.JPG" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio-page_img2.JPG"></a>
+                <a href="./images/image2.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/image2.jpg"></a>
+                <a href="./images/portfolio_img15.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img15.jpg"></a>
+            </div>
+            <!-- Images 3 -->
+            <div id="row1_img3">
+                <a href="./images/portfolio_img1.jpg" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio_img1.jpg"></a>
+                <a href="./images/about_img1.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/about_img1.jpg"></a>
+                <a href="./images/portfolio_img20.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img20.jpg"></a>
+            </div>
+            <!-- Images 4 -->
+            <div id="row1_img4">
+                <a href="./images/portfolio-page_img4.jpg" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio-page_img4.jpg"></a>
+                <a href="./images/about_img_intro.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/about_img_intro.jpg"></a>
+                <a href="./images/portfolio_img16.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img16.jpg"></a>
+            </div>
+        </div>
+
+        <!-- This is the second row of images -->
+        <div id="portfolio_img_row2">
+            <!-- This is the 2nd row of images -->
+            <div id="row2_img1">
+                <a href="./images/portfolio_img2.jpg" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio_img2.jpg"></a>
+                <a href="./images/info_img1.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/info_img1.jpg"></a>
+                <a href="./images/portfolio_img17.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img17.jpg"></a>
+            </div>
+            <!-- This is the 2nd row of images -->
+            <div id="row2_img2">
+                <a href="./images/homepage_3.jpg" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/homepage_3.jpg"></a>
+                <a href="./images/info_img2.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/info_img2.jpg"></a>
+                <a href="./images/portfolio_img23.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img23.jpg"></a>
+            </div>
+            <!-- This is the 2nd row of images -->
+            <div id="row2_img3">
+                <a href="./images/portfolio-page_img7.JPG" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio-page_img7.JPG"></a>
+                <a href="./images/info_img3.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/info_img3.jpg"></a>
+                <a href="./images/portfolio_img19.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img19.jpg"></a>
+            </div>
+            <!-- This is the 2nd row of images -->
+            <div id="row2_img4">
+                <a href="./images/portfolio-page_img3.jpg" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio-page_img3.jpg"></a>
+                <a href="./images/info_img4.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/info_img4.jpg"></a>
+                    <a href="./images/portfolio_img21.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                        <img src="./images/portfolio_img21.jpg"></a>
+            </div>
+        </div>
+
+        <!-- This is the third row of images -->
+        <div id="portfolio_img_row3">
+            <!-- This is the 3rd row of images -->
+            <div id="row3_img1">
+                <a href="./images/portfolio-page_img1.JPG" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio-page_img1.JPG"></a>
+                <a href="./images/portfolio_img10.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/portfolio_img10.jpg"></a>
+                <a href="./images/portfolio_img22.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img22.jpg"></a>
+            </div>
+            <!-- This is the 3rd row of images -->
+            <div id="row3_img2">
+                <a href="./images/portfolio-page_img9.JPG" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio-page_img9.JPG"></a>
+                <a href="./images/portfolio_img11.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/portfolio_img11.jpg"></a>
+                <a href="./images/portfolio_img18.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img18.jpg"></a>
+            </div>
+            <!-- This is the 3rd row of images -->
+            <div id="row3_img3">
+                <a href="./images/portfolio-page_img8.JPG" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio-page_img8.JPG"></a>
+                <a href="./images/portfolio_img12.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/portfolio_img12.jpg"></a>
+                <a href="./images/portfolio_img24.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img24.jpg"></a>
+            </div>
+            <!-- This is the 3rd row of images -->
+            <div id="row3_img4">
+                <a href="./images/portfolio-page_img6.JPG" class="portfolio_1" data-lightbox="photo_gal">
+                    <img src="./images/portfolio-page_img6.JPG"></a>
+                <a href="./images/portfolio_img13.jpg" class="portfolio_2" data-lightbox="photo_gal2">
+                    <img src="./images/portfolio_img13.jpg"></a>
+                <a href="./images/portfolio_img25.jpg" class="portfolio_3" data-lightbox="photo_gal3">
+                    <img src="./images/portfolio_img25.jpg"></a>
+            </div>
+        </div>
     </div>
-    <div class="bar" data-percent="80">
-        <canvas class="bar-circle" width="70" height="70"></canvas>
-        <h3>Photography</h3>
-        <h5>Photography with a strong documentary approach.</h5>
-      </div>
-    <div class="bar" data-percent="78">
-      <canvas class="bar-circle" width="70" height="70"></canvas>
-      <h3>Print-Design</h3>
-      <h5>Print design, a subset of graphic design.</h5>
+
+    <!-- This is the portfolio buttons -->
+    <div id="portfolio_btn">
+        <div id="portfolio_btn_1">1</div>
+        <div id="portfolio_btn_2">2</div>
+        <div id="portfolio_btn_3">3</div>
     </div>
- <style>
-   
-#bars {    
-    background-color: rgba(0, 0, 0, 0.527);
-	margin: 2em auto;
-    width: 100%;
-    height: 10%;
-	overflow: hidden;
-}
+</div>
 
-.bar {
-	float: left;
-	width: 20%;
-    text-align: center;
-    margin-left: 50px;
-}
+<!-- This is the carousel for the sponsors -->
+<div id="sponsor_carousel">
+    <div id="sponsor_wrapper">
+        <!-- This is logo 1 of the sponsors section -->
+        <div id="sponsor_logo1" class="sponsor_logo">
+            <img src="images/partners1.png">
+        </div>
+        <!-- This is logo 2 of the sponsors section -->                
+        <div id="sponsor_logo2" class="sponsor_logo">
+            <img src="images/partners2.png">
+        </div>
+        <!-- This is logo 3 of the sponsors section -->                
+        <div id="sponsor_logo3" class="sponsor_logo">
+            <img src="images/partners3.png">
+        </div>
+        <!-- This is logo 4 of the sponsors section -->                
+        <div id="sponsor_logo4" class="sponsor_logo">
+            <img src="imagespartners4.png">
+        </div>
+        <!-- This is logo 5 of the sponsors section -->                
+        <div id="sponsor_logo5" class="sponsor_logo">
+            <img src="images/partners5.png">
+        </div>
+        <!-- This is logo 6 of the sponsors section -->                
+        <div id="sponsor_logo6" class="sponsor_logo">
+            <img src="images/partners6.png">
+        </div>
+        <!-- This is logo 7 of the sponsors section -->                
+        <div id="sponsor_logo7" class="sponsor_logo">
+            <img src="images/partners7.png">
+        </div> 
+        <!-- This is logo 8 of the sponsors section -->                
+        <div id="sponsor_logo8" class="sponsor_logo">
+            <img src="images/partners8.png">
+        </div>
+        <!-- This is logo 9 of the sponsors section -->                
+        <div id="sponsor_logo9" class="sponsor_logo">
+            <img src="images/partners9.png">
+        </div>
+        <!-- This is logo 10 of the sponsors section -->                
+        <div id="sponsor_logo10" class="sponsor_logo">
+            <img src="images/partners10.png">
+        </div>
+    </div>
+</div>
 
-.bar h3{
-	font-size: 1.4em;
-	font-weight: normal;
-    text-transform: uppercase;
-    
-}
+<!-- This is the homepage about section on the portfolio page -->
+<div id="homepage_about_section">
+    <!-- This is the home about info -->
+    <div id="home_about_info">
+        <!-- This is the about info header -->
+        <div id="home_about_info_header">
+            <h2>Contact :</h2>
+        </div>
 
-.bar-circle {
-	display: block;
-    margin: 0.7em auto; 
-}
- </style>
+        <!-- This is the info contact 1 -->
+        <div id="home_about_info_contact1">
+            <div id="home_phone_logo">
+                <img src="./images/phone_logo.png">
+            </div>
+            <div id="home_phone_number">
+                <h4>021 685 0991</h4>
+            </div>
+        </div>
+
+         <!-- This is the info contact 2 -->
+        <div id="home_about_info_contact2">
+            <div id="home_email_logo">
+                <img src="./images/envelope_logo.png">
+            </div>
+            <div id="home_email_address">
+                <h4>info@code4ct.com</h4>
+            </div>
+        </div>
+
+         <!-- This is the info contact 3 -->
+        <div id="home_about_info_contact3">
+            <div id="home_location_logo">
+                <img src="./images/location_logo.png">
+            </div>
+            <div id="home_location">
+                <h4>Innovate South Africa, 403 Old Castle Brewery, 6 Beach Rd, Woodstock, Cape Town, 7915 </h4>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- This is the about links -->
+    <div id="home_about_links">
+        <h2>Company :</h2>
+        <ul>
+            <li><a href="#about">About us</a></li>
+            <li><a href="#contact">Contact us</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#program">Affiliate Program</a></li>
+        </ul>
+    </div>
+
+    <!-- This is the about support links -->
+    <div id="home_about_support">
+        <h2>Help & Support :</h2>
+        <ul>
+            <li><a href="#help_center">Help Centre</a></li>
+            <li><a href="#contact">Contact us</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+        </ul>
+    </div>
+</div>
+
+<!-- This is the footer -->
+<div id="footer">
+    <h3>Copyright <span>&#9746;</span> 2017 PRIVACY POLICY</h3>
+    <!-- This is the footer icons -->
+    <div id="footer_icons">
+        
+        <h3>Follow Us :</h3>
+        <a href="https://www.facebook.com/code4ct/" target="_blank" ><img src="./images/facebook_logo.png"></a>
+        <a href="https://twitter.com/code4ct?lang=en" target="_blank" ><img src="./images/twitter_logo.png"></a>
+        <a href="https://plus.google.com/100829065774930869640" target="_blank" ><img src="./images/google_logo.png"></a>
+        <a href="https://www.instagram.com/code4ct/?hl=en" target="_blank" ><img src="./images/instagram.png"></a>
+
+    </div>
+</div>
+
+</div>
+
+</div>
+
 </body>
 </html>
